* Rename vignettes/NEWS to NEWS.txt because of FancyVerb Error: No verbatim file NEWS
git-svn-id: file:///home/manu/work/irace/svn/trunk@1627 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2891,7 +2891,7 @@ to see the output that your algorithm produces.
 
 %% NEWS is latin1 but this file is utf8
 \begingroup\inputencoding{latin1}%
-\VerbatimInput{NEWS}%
+\VerbatimInput{NEWS.txt}%
 \endgroup
 
 \end{appendices}
