--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -14,7 +14,7 @@
 \usepackage{ifthen}
 \newboolean{Release}
 \setboolean{Release}{false}
-\setboolean{Release}{true}
+%\setboolean{Release}{true}
 \usepackage{calc}
 \usepackage{algorithm,algorithmic}
 \usepackage{booktabs}
@@ -1424,22 +1424,46 @@ parallel. There are four ways to parallelize a single run of \irace:
     \code{$IRACE_HOME/examples/sge-cluster/}.
 
   \item \parameter{targetRunnerParallel}: This option allows users to fully
-    control the parallelization of \parameter{targetRunner}. Its value must be
-    an \aR function that will be invoked by \irace as follows:
+    control the parallelization of the execution of \parameter{targetRunner}. 
+    Its value must be an \aR function that will be invoked by \irace as follows:
 
    <<targetRunnerParallel,prompt=FALSE, eval=FALSE>>=
      targetRunnerParallel(experiments, targetRunner, scenario)
    @
    %
+   
    where \code{experiments} is a list that contains elements with 
    information about configurations and instances to be executed (see
    \autoref{sec:runner} for a description), \code{targetRunner} is the
-   \parameter{targetRunner} script or function and \code{scenario} is the
-   scenario list. The \parameter{targetRunnerParallel} function must execute
-   the given \code{targetRunner} using the \code{experiments} and
-   \code{scenario} provided, and return a list of the same length as
-   \code{experiments} containing the output of each call to
-   \code{targetRunner}.
+   \parameter{targetRunner} script or function provided by the user and 
+   \code{scenario} is the scenario list. The \parameter{targetRunnerParallel} 
+   function must execute the given \parameter{targetRunner} for each experiment in the 
+   \code{experiments} list and using the provided \code{scenario} list, for example:
+   
+   <<targetRunnerParallel2,prompt=FALSE, eval=FALSE>>=
+     # Option 1
+     output.experiments <- list()
+     for (i in 1:length(experiments))
+       output.experiments[[i]] <- targetRunner(experiments[[i]], scenario)
+     # Option 2
+     output.experiments <- lapply(experiments, targetRunner, scenario=scenario)  
+   @
+   %
+   The \parameter{targetRunnerParallel} function must return a list of 
+   the same length as \code{experiments} containing the output of each call to
+   \parameter{targetRunner}. Each \parameter{targetRunner} execution returns a list 
+   containing two elements \code{<cost, time>}. When the time is not returned, the time 
+   element of the list should be set as \code{NA}. If you decide not to use the 
+   provided \code{targetRunner}, keep in mind that the output of each execution must be in this format,
+   the following is an example of an output of a \parameter{targetRunnerParallel} with 2 experiments, 
+   in which the execution time is not reported:
+  
+  <<targetRunnerParallel3,prompt=FALSE, eval=TRUE>>=
+     print(output)
+   @
+   %
+   
+   
 
 
 \end{itemize}
